--- a/parabola/index.html
+++ b/parabola/index.html
@@ -200,11 +200,11 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:17%; top:80%;}
-            25%  {left:35%; top:30%;}
-            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg);}
-            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg);}
-            100% {left:83%; top:72%;}
+            0%   {left:17%; top:80%; transition-timing-function:linear;}
+            25%  {left:35%; top:30%; transition-timing-function:linear;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); transition-timing-function:linear;}
+            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg); transition-timing-function: linear;}
+            100% {left:83%; top:72%; transition-timing-function: linear;}
         }
 
         /*
