--- a/parabola/index.html
+++ b/parabola/index.html
@@ -181,7 +181,7 @@ title: Math, Sonification, Plots
                 animation-iteration-count: infinite;
                 animation-direction: normal;
                 // transition-timing-function: linear;
-                transition-timing-function: cubic-bezier(0,0,0.58,1);
+                // transition-timing-function: cubic-bezier(0,0,0.58,1);
                 // transition-timing-function: ease;
         }
 
@@ -200,10 +200,10 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:17%; top:80%;}
-            25%  {left:35%; top:30%;}
-            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg);}
-            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg);}
+            0%   {left:17%; top:80%; animation-timing-function:ease-in;}
+            25%  {left:35%; top:30%; animation-timing-function:ease-out;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); animation-timing-function:ease-in;}
+            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg); animation-timing-function:ease-out;}
             100% {left:83%; top:72%;}
         }
 
