--- a/parabola/index.html
+++ b/parabola/index.html
@@ -202,9 +202,9 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%   {left:17%; top:80%; animation-timing-function:ease-in;}
             25%  {left:35%; top:30%; animation-timing-function:ease-out;}
-            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); animation-timing-function:ease-in;}
-            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg); animation-timing-function:ease-out;}
-            100% {left:83%; top:72%;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); animation-timing-function:linear;}
+            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg); animation-timing-function:linear;}
+            100% {left:83%; top:72%; animation-timing-function:ease-out;}
         }
 
         /*
