--- a/parabola/index.html
+++ b/parabola/index.html
@@ -202,8 +202,8 @@ title: Math, Sonification, Plots
         /* Standard syntax */
         @keyframes tracePlt {
             0%   {left:17%; top:80%; animation-timing-function:ease-in;}
-            25%  {left:35%; top:30%; animation-timing-function:ease-out;}
-            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); animation-timing-function:linear;}
+            25%  {left:35%; top:30%; animation-timing-function:ease-in;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); animation-timing-function:ease-out;}
             75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg); animation-timing-function:ease-in;}
             100% {left:83%; top:72%; animation-timing-function:ease-out;}
         }
