--- a/parabola/index.html
+++ b/parabola/index.html
@@ -183,7 +183,7 @@ title: Math, Sonification, Plots
                 // transition-timing-function: linear;
                 // transition-timing-function: cubic-bezier(0,0,0.58,1);
                 // transition-timing-function: ease;
-                // animation-timing-function:linear;
+                animation-timing-function:linear;
         }
 
         /* Safari 4.0 - 8.0 */
@@ -201,11 +201,17 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:17%; top:80%; animation-timing-function:ease-in;}
-            25%  {left:35%; top:30%; animation-timing-function:ease-in;}
-            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); animation-timing-function:ease-out;}
-            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg); animation-timing-function:ease-in;}
-            100% {left:83%; top:72%; animation-timing-function:ease-out;}
+            // 0%   {left:17%; top:80%; animation-timing-function:ease-in;}
+            // 25%  {left:35%; top:30%; animation-timing-function:ease-in;}
+            // 50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg); animation-timing-function:ease-out;}
+            // 75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg); animation-timing-function:ease-in;}
+            // 100% {left:83%; top:72%; animation-timing-function:ease-out;}
+
+            0%   {left:17%; top:80%;}
+            25%  {left:35%; top:30%;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg);}
+            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg);}
+            100% {left:83%; top:72%;}
         }
 
         /*
