--- a/parabola/index.html
+++ b/parabola/index.html
@@ -188,16 +188,25 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%   {left:17%; top:80%;}
+            25%  {left:35%; top:30%;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg);}
+            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg);}
+            100% {left:83%; top:72%;}
         }
         @-moz-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%   {left:17%; top:80%;}
+            25%  {left:35%; top:30%;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg);}
+            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg);}
+            100% {left:83%; top:72%;}
         }
         @-o-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%   {left:17%; top:80%;}
+            25%  {left:35%; top:30%;}
+            50%  {rotate(-60deg); left:49%; top:19%; rotate(60deg);}
+            75%  {rotate(120deg); left:60%; top:25%; rotate(-120deg);}
+            100% {left:83%; top:72%;}
         }
         /* Standard syntax */
         @keyframes tracePlt {
