--- a/parabola/parabolaPosSlope.html
+++ b/parabola/parabolaPosSlope.html
@@ -253,7 +253,7 @@ title: Math, Sonification, Plots
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
         <img id="line" class="center fit myContainer"
-            src="https://rbobkoskie3.github.io/images/ST_Pos_Parabola.png"
+            src="https://rbobkoskie3.github.io/images/ST_Parabola.png"
             title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
         <div id ="myAnimation"></div>
@@ -269,8 +269,8 @@ title: Math, Sonification, Plots
 
         <script>
             function change() {
-                var img1 = "https://rbobkoskie3.github.io/images/ST_Pos_Parabola.png",
-                    img2 = "https://rbobkoskie3.github.io/images/HC_Pos_Parabola.png";
+                var img1 = "https://rbobkoskie3.github.io/images/ST_Parabola.png",
+                    img2 = "https://rbobkoskie3.github.io/images/HC_Parabola.png";
                 var imgElement = document.getElementById('line');
                 imgElement.src = (imgElement.src === img1)? img2 : img1;
             }
@@ -282,14 +282,14 @@ title: Math, Sonification, Plots
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                 document.body.style.color = "yellow";
                 gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-                plot.src = "https://rbobkoskie3.github.io/images/HC_Pos_Parabola.png";
+                plot.src = "https://rbobkoskie3.github.io/images/HC_Parabola.png";
             }
             function setBG_White() {
                 document.getElementById("myAnimation").style.backgroundColor = "black";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                 document.body.style.color = "black";
                 gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-                plot.src = "https://rbobkoskie3.github.io/images/ST_Pos_Parabola.png";
+                plot.src = "https://rbobkoskie3.github.io/images/ST_Parabola.png";
             }
         </script>
 
