--- a/parabola/parabolaPosSlope.html
+++ b/parabola/parabolaPosSlope.html
@@ -188,16 +188,25 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%   {left:17%; top:23%;}
+            25%  {left:30%; top:68%;}
+            50%  {rotate(60deg); left:49%; top:90%; rotate(-60deg);}
+            75%  {rotate(-120deg); left:69%; top:67%; rotate(120deg);}
+            100% {left:82%; top:21%;}
         }
         @-moz-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%   {left:17%; top:23%;}
+            25%  {left:30%; top:68%;}
+            50%  {rotate(60deg); left:49%; top:90%; rotate(-60deg);}
+            75%  {rotate(-120deg); left:69%; top:67%; rotate(120deg);}
+            100% {left:82%; top:21%;}
         }
         @-o-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%   {left:17%; top:23%;}
+            25%  {left:30%; top:68%;}
+            50%  {rotate(60deg); left:49%; top:90%; rotate(-60deg);}
+            75%  {rotate(-120deg); left:69%; top:67%; rotate(120deg);}
+            100% {left:82%; top:21%;}
         }
         /* Standard syntax */
         @keyframes tracePlt {
