--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -250,7 +250,8 @@ title: Math, Sonification, Plots
     <div class="center fit myContainer">
         <img id="line" class="center fit myContainer"
             src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
-            title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
+            title="Click on Image to Toggle Between High Contrast <> Standard Contrast"
+            onclick = "change(); play(this);"/>
 
         <div id ="myAnimation"></div>
 
