--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -248,8 +248,8 @@ title: Math, Sonification, Plots
     <br><br>
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
-        var playButton = document.getElementById("playButton")
-        <img id="line" class="center fit myContainer"
+        <script> var playButton = document.getElementById("playButton") </script>
+        <img id="myFunction" class="center fit myContainer"
             src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
             title="Click on Image to Toggle Between High Contrast <> Standard Contrast"
             onclick = "change(); play(playButton);"/>
@@ -269,12 +269,12 @@ title: Math, Sonification, Plots
             function change() {
                 var img1 = "https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png",
                     img2 = "https://rbobkoskie3.github.io/images/HC_3D_Hyperbola.png";
-                var imgElement = document.getElementById('line');
+                var imgElement = document.getElementById('myFunction');
                 imgElement.src = (imgElement.src === img1)? img2 : img1;
             }
 
             var gtech = document.getElementById("gtech");
-            var plot = document.getElementById("line");
+            var plot = document.getElementById("myFunction");
             function setBG_Black() {
                 document.getElementById("myAnimation").style.backgroundColor = "yellow";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
