--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -248,7 +248,7 @@ title: Math, Sonification, Plots
     <br><br>
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
-        <script> var playButton = document.getElementById("playButton") </script>
+        var playButton = document.getElementById("playButton")
         <img id="myFunction" class="center fit myContainer"
             src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
             title="Click on Image to Toggle Between High Contrast <> Standard Contrast"
