--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -247,8 +247,8 @@ title: Math, Sonification, Plots
 <body>
     <br><br>
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
+    <script> var playButton = document.getElementById("playButton") </script>
     <div class="center fit myContainer">
-        
         <img id="myFunction" class="center fit myContainer"
             src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
             title="Click on Image to Toggle Between High Contrast <> Standard Contrast"
@@ -266,7 +266,6 @@ title: Math, Sonification, Plots
         <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 
         <script>
-            var playButton = document.getElementById("playButton")
             function change() {
                 var img1 = "https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png",
                     img2 = "https://rbobkoskie3.github.io/images/HC_3D_Hyperbola.png";
