--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -188,16 +188,43 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%    {left:50%; top:15%;}
+            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);}
+            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg);}
+            30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
+            40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
+            50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
+            60%   {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
+            70%   {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
+            80%   {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
+            90%   {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
+            100%  {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
         }
         @-moz-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%    {left:50%; top:15%;}
+            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);}
+            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg);}
+            30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
+            40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
+            50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
+            60%   {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
+            70%   {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
+            80%   {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
+            90%   {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
+            100%  {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
         }
         @-o-keyframes tracePlt {
-            0%   {left:17%; top:15%;}
-            100% {left:80%; top:80%;}
+            0%    {left:50%; top:15%;}
+            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);}
+            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg);}
+            30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
+            40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
+            50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
+            60%   {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
+            70%   {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
+            80%   {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
+            90%   {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
+            100%  {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
         }
         /* Standard syntax */
         @keyframes tracePlt {
@@ -207,7 +234,6 @@ title: Math, Sonification, Plots
             30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
             40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
             50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
-
             60%   {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
             70%   {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
             80%   {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
