--- a/line/lineZeroSlope.html
+++ b/line/lineZeroSlope.html
@@ -241,9 +241,10 @@ title: Math, Sonification, Plots
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
-        <img id="line" class="center fit myContainer"
+        <img id="myFunction" class="center fit myContainer"
             src="https://rbobkoskie3.github.io/images/ST_Hrz_Line.png"
-            title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
+            title="Click on Image to [ Play > Pause || ] Sonification"
+            onclick = "change(); play(playButton);"/>
 
         <div id ="myAnimation"></div>
 
@@ -251,21 +252,22 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_hrz.mp4"></audio>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)">SONIFICATION</button>
+        <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
         <br>
         <button class="volDec" onclick="vol_dec()">-</button>
         <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 
         <script>
+            var playButton = document.getElementById("playButton")
             function change() {
                 var img1 = "https://rbobkoskie3.github.io/images/ST_Hrz_Line.png",
                     img2 = "https://rbobkoskie3.github.io/images/HC_Hrz_Line.png";
-                var imgElement = document.getElementById('line');
+                var imgElement = document.getElementById('myFunction');
                 imgElement.src = (imgElement.src === img1)? img2 : img1;
             }
 
             var gtech = document.getElementById("gtech");
-            var plot = document.getElementById("line");
+            var plot = document.getElementById("myFunction");
             function setBG_Black() {
                 document.getElementById("myAnimation").style.backgroundColor = "yellow";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
