--- a/line/lineZeroSlope.html
+++ b/line/lineZeroSlope.html
@@ -5,14 +5,15 @@ title: Math, Sonification, Plots
 
 <head>
     <style>
-        .btn-group button {
-                background-color: #4CAF50; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
-                font-weight: bold;
-                padding: 10px 24px; /* Some padding */
-                cursor: pointer; /* Pointer/hand icon */
-                float: left; /* Float the buttons side by side */
+        .btn-group myFigs {
+                    background-color: #4CAF50; /* Green background */
+                    border: 1px solid green; /* Green border */
+                    color: white; /* White text */
+                    font-weight: bold;
+		    font-size: 12px;
+                    padding: 6px 12px; /* Some padding */
+                    cursor: pointer; /* Pointer/hand icon */
+                    float: left; /* Float the buttons side by side */
         }
 
         .button {
@@ -233,6 +234,8 @@ title: Math, Sonification, Plots
 
 <body>
     <br><br>
+    <a href="/line/linePosSlope.html" class="myFigs">POS SLOPE</a>
+    <a href="/line/lineZeroSlope.html" class="myFigs">ZERO SLOPE</a>
     <nav><ul>
         <li><a href="/line" target="_self">NEG SLOPE</a></li>
         <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
