--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -233,11 +233,11 @@ title: Math, Sonification, Plots
 
 <body>
     <br><br>
-    <nav><ul>
-        <li><a href="/line" target="_self">NEG SLOPE</a></li>
-        <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
-        <li><a href="/line/lineZeroSlope.html" target="_self">ZERO SLOPE</a></li>
-    </ul></nav>
+    <div class="myFigs">
+        <a href="/line" class="buttonFig">NEG SLOPE</a>
+        <a href="/line/linePosSlope.html" class="buttonFig">POS SLOPE</a>
+        <a href="/line/lineZeroSlope.html" class="buttonFig">ZERO SLOPE</a>
+    </div>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
