--- a/line/lineZeroSlope.html
+++ b/line/lineZeroSlope.html
@@ -244,15 +244,10 @@ title: Math, Sonification, Plots
 <body>
     <br><br>
     <div class="myFigs">
+        <a href="/line" class="buttonFig">NEG SLOPE</a>
         <a href="/line/linePosSlope.html" class="buttonFig">POS SLOPE</a>
         <a href="/line/lineZeroSlope.html" class="buttonFig">ZERO SLOPE</a>
     </div>
-
-    <nav><ul>
-        <li><a href="/line" target="_self">NEG SLOPE</a></li>
-        <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
-        <li><a href="/line/lineZeroSlope.html" target="_self">ZERO SLOPE</a></li>
-    </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
