--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -5,14 +5,24 @@ title: Math, Sonification, Plots
 
 <head>
     <style>
-        .btn-group button {
+        .btn-group myFigs {
+                    background-color: #4CAF50; /* Green background */
+                    border: 1px solid green; /* Green border */
+                    color: white; /* White text */
+                    cursor: pointer; /* Pointer/hand icon */
+        }
+
+        .buttonFig {
                 background-color: #4CAF50; /* Green background */
                 border: 1px solid green; /* Green border */
                 color: white; /* White text */
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
                 font-weight: bold;
-                padding: 10px 24px; /* Some padding */
-                cursor: pointer; /* Pointer/hand icon */
-                float: left; /* Float the buttons side by side */
+		font-size: 12px;
+                padding: 6px 12px; /* Some padding */
+                cursor: pointer;
         }
 
         .button {
