--- a/parabola/index.html
+++ b/parabola/index.html
@@ -5,14 +5,24 @@ title: Math, Sonification, Plots
 
 <head>
     <style>
-        .btn-group button {
+        .btn-group myFigs {
+                    background-color: #4CAF50; /* Green background */
+                    border: 1px solid green; /* Green border */
+                    color: white; /* White text */
+                    cursor: pointer; /* Pointer/hand icon */
+        }
+
+        .buttonFig {
                 background-color: #4CAF50; /* Green background */
                 border: 1px solid green; /* Green border */
                 color: white; /* White text */
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
                 font-weight: bold;
-                padding: 10px 24px; /* Some padding */
-                cursor: pointer; /* Pointer/hand icon */
-                float: left; /* Float the buttons side by side */
+		font-size: 12px;
+                padding: 6px 12px; /* Some padding */
+                cursor: pointer;
         }
 
         .button {
@@ -254,16 +264,17 @@ title: Math, Sonification, Plots
 
 <body>
     <br><br>
-    <nav><ul>
-        <li><a href="." target="_self">NEG SLOPE</a></li>
-        <li><a href="/parabola/parabolaPosSlope.html" target="_self">POS SLOPE</a></li>
-    </ul></nav>
+    <div class="myFigs">
+        <a href="." class="buttonFig">NEG SLOPE</a>
+        <a href="/parabola/parabolaPosSlope.html" class="buttonFig">POS SLOPE</a>
+    </div>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
-        <img id="line" class="center fit myContainer"
+        <img id="myFunction" class="center fit myContainer"
             src="https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png"
-            title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
+            title="Click on Image to [ Play > Pause || ] Sonification"
+            onclick = "change(); play(playButton);"/>
 
         <div id ="myAnimation"></div>
 
@@ -271,21 +282,22 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/parabola_neg.mp4"></audio>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)">SONIFICATION</button>
+        <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
         <br>
         <button class="volDec" onclick="vol_dec()">-</button>
         <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 
         <script>
+            var playButton = document.getElementById("playButton")
             function change() {
                 var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Parabola.png",
                     img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Parabola.png";
-                var imgElement = document.getElementById('line');
+                var imgElement = document.getElementById('myFunction');
                 imgElement.src = (imgElement.src === img1)? img2 : img1;
             }
 
             var gtech = document.getElementById("gtech");
-            var plot = document.getElementById("line");
+            var plot = document.getElementById("myFunction");
             function setBG_Black() {
                 document.getElementById("myAnimation").style.backgroundColor = "yellow";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
