--- a/circle/index.html
+++ b/circle/index.html
@@ -228,11 +228,17 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%    {left:50%; top:15%;}
-            25%   {rotate(90deg);   left:75%; top:30%; rotate(-90deg);}
-            50%   {rotate(180deg);  left:50%; top:60%; rotate(-180deg);}
-            75%   {rotate(270deg);  left:25%; top:30%; rotate(-270deg);}
-            100%  {rotate(360deg);  left:50%; top:15%; rotate(-360deg);}
+            // 0%    {left:50%; top:15%;}
+            // 25%   {rotate(90deg);   left:75%; top:30%; rotate(-90deg);}
+            // 50%   {rotate(180deg);  left:50%; top:60%; rotate(-180deg);}
+            // 75%   {rotate(270deg);  left:25%; top:30%; rotate(-270deg);}
+            // 100%  {rotate(360deg);  left:50%; top:15%; rotate(-360deg);}
+
+            0%   {-webkit-transform: rotate(0deg)   translateX(5px) translateY(120px) rotate(0deg)    scale(1);}
+            25%  {-webkit-transform: rotate(90deg)  translateX(5px) translateY(120px) rotate(-90deg)  scale(.75);}
+            50%  {-webkit-transform: rotate(180deg) translateX(5px) translateY(120px) rotate(-180deg) scale(.60);}
+            75%  {-webkit-transform: rotate(270deg) translateX(5px) translateY(120px) rotate(-270deg) scale(.75);}
+            100% {-webkit-transform: rotate(360deg) translateX(5px) translateY(120px) rotate(-360deg) scale(1);}
         }
 
         /*
